Test profiles added to the database